--- a/styles.css
+++ b/styles.css
@@ -17,40 +17,40 @@
   box-sizing: border-box;
 }
 
-html {
+html, body {
   height: 100%;
   font-family: "Montserrat", sans-serif;
   font-size: 14px;
-}
-
-body {
-  height: 100%;
-  background: black;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content__general {
-  align-items: flex-start;
-  background-color: #212123;
   display: flex;
-  min-height: 50%;
   justify-content: center;
-  padding: var(--spacing-64) var(--spacing-24);
+  align-items: center;
+  width: 100%;
+  height: 100%;
 }
 
 .content__cards-grid {
   display: flex;
-  flex-wrap: nowrap;
   gap: var(--spacing-24);
   overflow-x: auto;
   max-width: var(--general-box-width);
-  width: 100%;
+  width: auto;
+  flex-wrap: nowrap;
+  justify-content: center;
+  align-items: center;
 }
 
 .card__element {
   list-style: none;
   position: relative;
   flex: 0 0 auto;
-  width: 250px; /* Adjust the width of the card as needed */
+  width: 200px; /* Adjust the width of the card as needed */
 }
 
 .card__element:before {
@@ -79,9 +79,7 @@ body {
   transform: scale(1.05) translateZ(0);
 }
 
-.content__cards-grid:hover
-  > .card__element:not(:hover)
-  .card__element--background {
+.content__cards-grid:hover > .card__element:not(:hover) .card__element--background {
   filter: brightness(0.5) saturate(0) contrast(1.2) blur(20px);
 }
 
